methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:28: error: Unmatched closing brace '}' ignored here
} 
^PictureMono2:30: error: eof expected but '}' found.
}
^